--- a/styles/match-style.css
+++ b/styles/match-style.css
@@ -102,13 +102,17 @@ body {
 }
 
 #all-group {
-    padding: 15px 64px;
+    padding: 15px 60px;
 }
 
-#blog-btn {
+#match-btn {
     background-color: #DD0000;
     color: #FFFFFF;
-    padding: 15px 84px;
+    /* padding: 15px 84px; */
+}
+
+#blog {
+    padding: 15px 80px;
 }
 
 /* ---------------------------------blogs---------------------------------- */
@@ -130,49 +134,40 @@ body {
 .blog {
     border: 1px solid #E8E8E8;
     border-radius: 10px;
+    padding: 20px;
+    width: 250px;
+    height: 200px;
+}
+
+.blog-image {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+
 }
 
 .blog-image img {
-    width: 100%;
+    width: 40%;
 }
 
 .blog-info {
+    margin-top: 20px;
     padding: 10px;
+    text-align: center;
 }
 
-.blog-info p {
+.blog-info .team-name {
     margin-top: 15px;
     margin-bottom: 15px;
-}
-
-.transfer-button {
-    text-decoration: none;
+    font-weight: 600;
+    font-size: 20px;
     color: #161616;
-    font-weight: 500;
+}
+
+.blog-info .date {
+    font-weight: 400;
     font-size: 16px;
-    padding: 4px 16px;
-    border: 1px solid #161616;
-    border-radius: 5px;
-    transition: .3s;
-}
-
-.transfer-button:hover {
-    opacity: .5;
-}
-
-.blog-icon {
-    text-align: left;
-    display: flex;
-    justify-content: flex-start;
-    gap: 40px;
-    margin-top: 10px;
-}
-
-.view-btn {
-    display: flex;
-    justify-content: center;
-    margin-bottom: 30px;
-    display: none;
+    color: #4D4D4D;
 }
 
 /* ---------------------------------------footer-----------------------------  */
@@ -280,6 +275,7 @@ hr {
 
     .blogs {
         grid-template-columns: repeat(1, 1fr);
+        margin: auto;
     }
 
     .footer-deatil {
@@ -338,17 +334,6 @@ hr {
 
     .blogs {
         grid-template-columns: repeat(2, 1fr);
-    }
-
-    #last-blog {
-        display: none;
-    }
-
-    .view-btn {
-        display: flex;
-        justify-content: center;
-        margin-bottom: 30px;
-
     }
 
     .footer-deatil {
